Modifications of pygeostat documentation

--- a/static/Pygeostat/_static/BoundaryModeling.ipynb
+++ b/static/Pygeostat/_static/BoundaryModeling.ipynb
@@ -1973,9 +1973,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pygeostat]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pygeostat-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
